# PoolDispatcher

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  PoolDispatcher.h  QueueDistribution.h  TaskQueue.h
tests/: TestTaskQueue.cpp
